@@ -14,6 +14,11 @@
       <input placeholder="Math..." type="text" class="form-control" id="class">
     </div>
     
+    <div class="form-group">
+      <label class="homeworkLabel" for="description">Homework Description:</label>
+      <input placeholder="Questions..." type="text" class="form-control" id="description">
+    </div>
+    
 
     <div class="form-group">
       <label class="homeworkLabel" for="dueDate">Due Date:</label>
